changes to navbar

--- a/creators.html
+++ b/creators.html
@@ -95,6 +95,14 @@
         <li><a href="scoringrubric.html">The Hunt</a></li>
         <li><a href="joinatournament.html">Join a Tournament</a></li>
         <li><a href="instructors.html">The Instructors</a></li>
+        <li class="dropdown">
+       <a class="dropdown-toggle" data-toggle="dropdown" href="conf.html">Conferences
+       <span class="caret"></span></a>
+       <ul class="dropdown-menu">
+         <li><a href="pastconf.html">Past Conferences</a></li>
+         <li><a href="upcomingconf.html">Upcoming Conferences</a></li>
+       </ul>
+     </li>
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
@@ -131,7 +139,7 @@
 
 `	<div class="clearfix round1" style="color:white;text-align:center">
 		<font size="4">John Styers is a senior at the University of Kansas studying <a href="https://cpe.ku.edu/" style="color:white"><u>Chemical Engineering</u></a>
-			with a focus in Biomedical Engineering. He also is studying Physics as a minor. He achieved a position on the Dean's List both semesters of his 
+			with a focus in Biomedical Engineering. He also is studying Physics as a minor. He achieved a position on the Dean's List both semesters of his
 			sophomore school year. He hopes to one day design, develope, and market real-time integrated prosthetic limbs and organs for commercial use by everyday
 			citizens. He currently works under Dr. Christopher Rogan in the development of <i>Fantasy Physics</i> with KU's <a href="http://kuhep.ku.edu/" style="color:white"><u>
 			Experimental High Energy Physics</u></a> group.</font>
