--- a/rules.html
+++ b/rules.html
@@ -92,6 +92,14 @@
             <li><a href="scoringrubric.html">The Hunt</a></li>
             <li><a href="joinatournament.html">Join a Tournament</a></li>
             <li><a href="instructors.html">The Instructors</a></li>
+            <li class="dropdown">
+           <a class="dropdown-toggle" data-toggle="dropdown" href="conf.html">Conferences
+           <span class="caret"></span></a>
+           <ul class="dropdown-menu">
+             <li><a href="pastconf.html">Past Conferences</a></li>
+             <li><a href="upcomingconf.html">Upcoming Conferences</a></li>
+           </ul>
+         </li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
