--- a/signup.html
+++ b/signup.html
@@ -96,12 +96,20 @@
           <li><a href="neutrinos.html">Neutrino Members</a></li>
           <li><a href="astroparticle.html">Astroparticle Members</a></li>
           <li><a href="lhcatlas.html">LHC Atlas Members</a></li>
-          <li><a href="lhccms.html">LHC CMS Members</a></li>            
+          <li><a href="lhccms.html">LHC CMS Members</a></li>
         </ul>
       </li>
         <li><a href="scoringrubric.html">The Hunt</a></li>
         <li><a href="joinatournament.html">Join a Tournament</a></li>
         <li><a href="instructors.html">The Instructors</a></li>
+        <li class="dropdown">
+       <a class="dropdown-toggle" data-toggle="dropdown" href="conf.html">Conferences
+       <span class="caret"></span></a>
+       <ul class="dropdown-menu">
+         <li><a href="pastconf.html">Past Conferences</a></li>
+         <li><a href="upcomingconf.html">Upcoming Conferences</a></li>
+       </ul>
+     </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
         <li class="active"><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
@@ -129,12 +137,12 @@
          <button onclick="logout()">Logout</button>
     </div>
  <div class="footer">
-         <i><p>Developed at <u><a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</u></a> | 
+         <i><p>Developed at <u><a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</u></a> |
          <u><a href="about.html" style="color:white">About</u></a> | <u><a href="creators.html" style="color:white">The Creators</i></u></a></p>
      </div>
-     
+
      <div class="background-img">
      <img src="kansas-jayhawks-profile.jpg" width="50" height="50"></div>
-     </div>                                                
+     </div>
 </body>
 </html>
