--- a/rules.html
+++ b/rules.html
@@ -124,7 +124,7 @@
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h1 class="panel-title">
-                  <a data-toggle="collapse" href="#collapse1" style="color:black"><h4>Gameplay Monikers</a></h4>
+                  <a data-toggle="collapse" href="#collapse1" style="color:black"><h4>Need to Know Terms</a></h4>
               </h1>
               </div>
               <div id="collapse1" class="panel-collapse collapse">
@@ -148,7 +148,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h1 class="panel-title">
-                        <a data-toggle="collapse" href="#collapse2" style="color:black"><h4>How It Works Overview</a></h4>
+                        <a data-toggle="collapse" href="#collapse2" style="color:black"><h4>Overview</a></h4>
                     </h1>
                 </div>
                 <div id="collapse2" class="panel-collapse collapse">
@@ -185,7 +185,7 @@
                 <div id="collapse3" class="panel-collapse collapse">
                     <ul class="list-group">
                       <li class="list-group-item"><font size="3"><i><b> A) </i></b> Fantasy points will be scored and stored digitally </font></li>
-                      <li class="list-group-item"><font size="3"><i><b> B) </i></b> Each crew will have 8 different members </font></li>
+                      <li class="list-group-item"><font size="3"><i><b> B) </i></b> Each crew will have 7 different members </font></li>
                       <li class="list-group-item"><font size="3"><i><b> C) </i></b> No two Executives may have the exact same crew; at least one member must differ </font></li>
                       <li class="list-group-item"><font size="3"><i><b> D) </i></b> When the number of Executives is odd, each Executive & their crew will have a bye week </font></li>
                       <li class="list-group-item"><font size="3"><i><b> E) </i></b> </font></li>
