--- a/astroparticle.html
+++ b/astroparticle.html
@@ -122,12 +122,6 @@
             its kind, designed to observe the cosmos from deep within the South Pole ice. An international group of scientists
             responsible for the scientific research makes up the IceCube Collaboration."</font></p>
         <hr>
-        <h3><a href="http://www.fnal.gov/" style="color:white"><u>FermiLab</u></a></h3>
-        <p class="round1" style="margin-left:20px;color:white"><font size="3">"What are we made of? How did the universe begin? What
-            secrets do the smallest, most elemental particles of matter hold, and how can they help us understand the intricacies of
-            space and time? Since 1967, Fermilab has worked to answer these and other fundamental questions and enhance our understanding
-            of everything we see around us. As the United States' premier particle physics laboratory, we do science that matters."</font></p>
-        <hr>
         <h3><a href="https://depts.washington.edu/admx/" style="color:white"><u>ADMX (The Axion Dark Matter eXperiment)</u></a></h3>
         <p class="round1" style="margin-left:20px;color:white"><font size="3">ADMX is an axion (a hypothetical particle that solves both long-standing problems in nuclear
             physics and could be responsible for some or all of the dark matter of the universe) haloscope, which uses a strong magnetic field to convert dark matter axions
@@ -172,12 +166,12 @@
 		   document.documentElement.scrollTop = 0;
 	   }
 	    </script>
-       <div class="flex-container">
-             <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> |
-             <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a>  | &copy; 2018</p>
-       </div>
-       </div>
-       </div>
-       </div>
+        <div class="flex-container">
+              <p style="color:white"><i>Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> |
+              <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a> | &copy; 2018</i></p>
+     </div>
+     </div>
+     </div>
+     </div>
 </body>
 </html>
