--- a/creators.html
+++ b/creators.html
@@ -16,7 +16,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://images.unsplash.com/photo-1534190938029-2d03c3bec5fe?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=63054f5a0942ad899c1da35510a7f69e&w=1000&q=80");
+        background-image: url("https://cdn1.collective-evolution.com/assets/uploads/2015/10/milk.jpg");
     }
     .cd-fixed-bg
     {
