--- a/directdarkmatter.html
+++ b/directdarkmatter.html
@@ -212,8 +212,8 @@
 	   </script>
 
        <div class="flex-container">
-             <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> |
-             <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a>  | &copy; 2018</p>
+             <p style="color:white"><i>Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> |
+             <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a>  | &copy; 2018</i></p>
        </div>
        </div>
        </div>
