--- a/lhcatlas.html
+++ b/lhcatlas.html
@@ -175,8 +175,8 @@
 	   }
 	    </script>
       <div class="flex-container">
-             <p style="color:black">Developed at <a href="http://physics.ku.edu/" style="color:black"><u> The University of Kansas - Physics & Astronomy Department</u></a> |
-             <a href="about.html" style="color:black"><u>About</u></a> | <a href="creators.html" style="color:black"><u>The Creators</u></a>  | &copy; 2018</p>
+             <p style="color:black"><i>Developed at <a href="http://physics.ku.edu/" style="color:black"><u> The University of Kansas - Physics & Astronomy Department</u></a> |
+             <a href="about.html" style="color:black"><u>About</u></a> | <a href="creators.html" style="color:black"><u>The Creators</u></a>  | &copy; 2018</i></p>
        </div>
        </div>
        </div>
