--- a/joinatournament.html
+++ b/joinatournament.html
@@ -133,20 +133,20 @@
             <h2 style="color:white"><b><i>WIMP Direct Dark Matter Members</i></b></h2>
             <table colspan="3" class="table table-bordered" style="color:white">
        	        <tr>
-       	            <th scope="col" style="text-align:center">LUX-ZEPLIN (LZ) <br><i>33 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
+       	            <th scope="col" style="text-align:center">LUX-ZEPLIN (LZ) <br><i>33 points; 6 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
        	            <th scope="col" style="text-align:center">ArDM (Argon Dark Matter Experiment) &nbsp;&nbsp; <input type="checkbox"></th>
               	    <th scope="col" style="text-align:center">XMASS &nbsp;&nbsp; <input type="checkbox"></th>
                     <th scope="col" style="text-align:center">XENON &nbsp;&nbsp; <input type="checkbox"></th>
        	        </tr>
                 <tr>
                     <th scope="col" style="text-align:center">PICASSO &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th scope="col" style="text-align:center">LUX <br><i>25 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th scope="col" style="text-align:center">PICO <br><i>15 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th scope="col" style="text-align:center">COSINE-100 <br><i>15 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th scope="col" style="text-align:center">LUX <br><i>25 points; 6 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th scope="col" style="text-align:center">PICO <br><i>15 points; 3 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th scope="col" style="text-align:center">COSINE-100 <br><i>15 points; 3 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
                 <tr>
                     <th scope="col" style="text-align:center">EDELWEISS &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th scope="col" style="text-align:center">DarkSide <br><i>8 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th scope="col" style="text-align:center">DarkSide <br><i>8 points; 2 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
                     <th scope="col" style="text-align:center">CRESST &nbsp;&nbsp; <input type="checkbox"></th>
                     <th scope="col" style="text-align:center">DEAP-3600 &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
@@ -160,7 +160,7 @@
             <h2 style="color:white"><b><i>Indirect Dark Matter Members</i></b></h2>
             <table colspan="3" class="table table-bordered" style="color:white">
                 <tr>
-                    <th style="text-align:center">Super-Kamiokande <br><i>15 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">Super-Kamiokande <br><i>15 points; 3 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
                     <th style="text-align:center">PAMELA &nbsp;&nbsp; <input type="checkbox"></th>
                     <th style="text-align:center">MAGIC Telescopes &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
@@ -178,34 +178,34 @@
             <h2 style="color:white"><b><i>Neutrino Members</i></b></h2>
             <table colspan="3" class="table table-bordered" style="color:white">
                 <tr>
-                    <th style="text-align:center">PROSPECT <br><i>27 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th style="text-align:center">NOvA <br><i>92 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th style="text-align:center">MicroBooNE <br><i>25 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">PROSPECT <br><i>27 points; 5 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">NOvA <br><i>92 points; 13 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">MicroBooNE <br><i>25 points; 5 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
                 <tr>
-                    <th style="text-align:center">COHERENT <br><i>32 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th style="text-align:center">JUNO <br><i>8 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th style="text-align:center">DUNE <br><i>61 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">COHERENT <br><i>32 points; 5 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">JUNO <br><i>8 points; 2 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">DUNE <br><i>61 points; 11 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
                 <tr>
                     <th style="text-align:center">MINOS &nbsp;&nbsp; <input type="checkbox"></th>
                     <th style="text-align:center">BOREXINO &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th style="text-align:center">MiniBooNE <br><i>7 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">MiniBooNE <br><i>7 points; 2 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
                 <tr>
-                    <th style="text-align:center">ICARUS <br><i>8 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">ICARUS <br><i>8 points; 2 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
                     <th colspan="2" style="text-align:center">T2K &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
             </table><br>
             <h2 style="color:white"><b><i>Astroparticle Members</i></b></h2>
             <table colspan="3" class="table table-bordered" style="color:white">
                 <tr>
-                    <th style="text-align:center">KATRIN <br><i>8 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th style="text-align:center">IceCube <br><i>82 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">KATRIN <br><i>8 points; 2 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">IceCube <br><i>82 points; 13 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
                 <tr>
                     <th style="text-align:center">MeV Gamma-ray &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th style="text-align:center">ADMX (The Axion Dark Matter eXperiment) <br><i>37 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">ADMX (The Axion Dark Matter eXperiment) <br><i>37 points; 6 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
                 <tr>
                     <th style="text-align:center">CERN Axion Solar Telescope &nbsp;&nbsp; <input type="checkbox"></th>
@@ -216,28 +216,28 @@
             <table colspan="3" class="table table-bordered" style="color:white">
                 <tr>
                     <th style="text-align:center">The Standard Model &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th style="text-align:center">Higgs Physics <br><i>29 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">Higgs Physics <br><i>29 points; 4 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
                 <tr>
-                    <th style="text-align:center">Supersymmetry <br><i>9 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th style="text-align:center">Exotica <br><i>8 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">Supersymmetry <br><i>9 points; 1 talk</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">Exotica <br><i>8 points; 1 talk</i> &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
                 <tr>
-                    <th colspan="2" style="text-align:center">Research & Development, Upgrades, Detector Operation, & Instrumentation <br><i>41 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th colspan="2" style="text-align:center">Research & Development, Upgrades, Detector Operation, & Instrumentation <br><i>41 points; 6 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
             </table><br>
             <h2 style="color:white"><b><i>LHC CMS Members</i></b></h2>
             <table colspan="3" class="table table-bordered" style="color:white">
                 <tr>
-                    <th style="text-align:center">The Standard Model <br><i>23 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th style="text-align:center">Higgs Physics <br><i>33 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">The Standard Model <br><i>23 points; 3 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">Higgs Physics <br><i>33 points; 4 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
                 <tr>
-                    <th style="text-align:center">Supersymmetry <br><i>31 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th style="text-align:center">Exotica <br><i>67 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">Supersymmetry <br><i>31 points; 4 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">Exotica <br><i>67 points; 9 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
                 <tr>
-                    <th colspan="2" style="text-align:center">Research & Development, Upgrades, Detector Operation, & Instrumentation <br><i>15 points</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th colspan="2" style="text-align:center">Research & Development, Upgrades, Detector Operation, & Instrumentation <br><i>15 points; 2 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
             </table><br>
 
