--- a/login.html
+++ b/login.html
@@ -93,16 +93,19 @@
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="directdarkmatter.html">WIMP Dark Matter Members</a></li>
-          <li><a href="indirectdarkmatter.html">Indirect Dark Matter Members</a></li>
+          <li><a href="indirectdarkmatter.html">Indirect Dark Matter and Astroparticle Members</a></li>
           <li><a href="neutrinos.html">Neutrino Members</a></li>
-          <li><a href="astroparticle.html">Astroparticle Members</a></li>
           <li><a href="lhcatlas.html">LHC Atlas Members</a></li>
           <li><a href="lhccms.html">LHC CMS Members</a></li>
         </ul>
       </li>
-        <li><a href="scoringrubric.html">The Hunt</a></li>
-        <li><a href="joinatournament.html">Join a Tournament</a></li>
-        <li><a href="instructors.html">The Instructors</a></li>
+      <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="joinatournament.html">Join a Tournament
+                <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="leaderboard.html">Leaderboard</a></li>
+                </ul>
+            </li>
         <li class="dropdown">
        <a class="dropdown-toggle" data-toggle="dropdown" href="conf.html">Conferences
        <span class="caret"></span></a>
@@ -113,6 +116,7 @@
      </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
+        <li><a href="instructors.html">The Instructors</a></li>
         <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
         <li class="active"><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
