--- a/rules.html
+++ b/rules.html
@@ -89,8 +89,13 @@
           <li><a href="lhccms.html">LHC CMS Members</a></li>
         </ul>
       	   	</li>
-            <li><a href="scoringrubric.html">The Hunt</a></li>
-            <li><a href="joinatournament.html">Join a Tournament</a></li>
+            <li class="dropdown">
+                  <a class="dropdown-toggle" data-toggle="dropdown" href="joinatournament.html">Join a Tournament
+                      <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                          <li><a href="leaderboard.html">Leaderboard</a></li>
+                      </ul>
+                  </li>
             <li><a href="instructors.html">The Instructors</a></li>
             <li class="dropdown">
            <a class="dropdown-toggle" data-toggle="dropdown" href="conf.html">Conferences
@@ -135,7 +140,7 @@
                       <li class="list-group-item"><font size="3"><i><b> 3) Build your crew</i></b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Each executive chooses one member
                       at a time until their crew is full; don't forget to select a well-rounded crew. </font></li>
                       <li class="list-group-item"><font size="3"><i><b> 4) Your crew competes against another crew every week</i></b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                          The members' stats from <a href="scoringrubric.html" style="color:black"><i><u>The Hunt</u></i></a> taken from presentations given at the American Physical Society convention are converted into fantasy points. The crew that has
+                          The members' stats from <a href="#identifier" style="color:black"><i><u>The Hunt</u></i></a> taken from presentations given at the American Physical Society convention are converted into fantasy points. The crew that has
                           earned the most points wins the game for that week. Win as many games as possible for a chance to qualify for the playoffs.</font></li>
                       <li class="list-group-item"><font size="3"><i><b> 5) Make moves to boost your crew</i></b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; As the executive, you are in charge:
                           Drop or bench members you feel aren't cutting it and replace them with available members, your second strings, or even make trades with other executives.</font></li>
@@ -184,15 +189,50 @@
                 <div id="collapse3" class="panel-collapse collapse">
                     <ul class="list-group">
                       <li class="list-group-item"><font size="3"><i><b> A) </i></b> Fantasy points will be scored and stored digitally </font></li>
-                      <li class="list-group-item"><font size="3"><i><b> B) </i></b> Each crew will have 7 different members </font></li>
-                      <li class="list-group-item"><font size="3"><i><b> C) </i></b> No two Executives may have the exact same crew; at least one member must differ </font></li>
-                      <li class="list-group-item"><font size="3"><i><b> D) </i></b> When the number of Executives is odd, each Executive & their crew will have a bye week </font></li>
+                      <li class="list-group-item"><font size="3"><i><b> B) </i></b> Each crew will have 15 different members </font></li>
+                      <li class="list-group-item"><font size="3"><i><b> C) </i></b> Every Exeuctive must have 2 members from each crew, with the remaining 3 coming from any crew of choice </font></li>
+                      <li class="list-group-item"><font size="3"><i><b> D) </i></b> No two Executives may have the exact same crew; at least one member must differ </font></li>
+                      <li class="list-group-item"><font size="3"><i><b> E) </i></b> When the number of Executives is odd, each Executive & their crew will have a bye week </font></li>
                 </div>
             </div>
         </div>
     </div>
 <br>
 
+
+<div class="container">
+    <div class="panel-group">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h1 class="panel-title">
+                    <a data-toggle="collapse" href="#collapse4" style="color:black"><h4>The Hunt &dArr;<a name="identifier"</a></a></h4>
+                </h1>
+            </div>
+            <div id="collapse4" class="panel-collapse collapse">
+                <ul class="list-group">
+                    <li class="list-group-item"><font size="3"><i>Take a look into how Fantasy Physics hunts for and administers points to each Crew Member.</i></font></li></ul>
+                <table colspan="3" class="table table-bordered" style="color:black">
+                    <tr>
+                        <th scope="col" style="text-align:center"><font size="3"># of Feynmann Diagrams; +1</font></th>
+                        <th scope="col" style="text-align:center"><font size="3"># of Graphs; +1</font></th>
+                        <th scope="col" style="text-align:center"><font size="3"># of Data Points/Curves on a Graph; +1</font></th>
+                    </tr>
+                    <tr>
+                        <th scope="col" style="text-align:center"><font size="3"># of Photographs; +1</font></th>
+                        <th scope="col" style="text-align:center"><font size="3">Most Intimidating Equation; +1</font></th>
+                        <th scope="col" style="text-align:center"><font size="3">Lowest Energy/Mass/Temperature Mentioned; +1</font></th>
+                    </tr>
+                    <tr>
+                        <th scope="col" style="text-align:center"><font size="3">Highest Energy/Mass/Temperature Mentioned; +1</font></th>
+                        <th scope="col" style="text-align:center"><font size="3">Largest Dataset; +1</font></th>
+                        <th scope="col" style="text-align:center"><font size="3"># of Significant Figures; +1</font></th>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+<br>
 <!--
      <h4 style="text-align:center;color:white"><b><i>Neutrino Tournament</b></i></h4>
      <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
