--- a/directdarkmatter.html
+++ b/directdarkmatter.html
@@ -81,16 +81,19 @@
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="directdarkmatter.html">WIMP Dark Matter Members</a></li>
-          <li><a href="indirectdarkmatter.html">Indirect Dark Matter Members</a></li>
+          <li><a href="indirectdarkmatter.html">Indirect Dark Matter and Astroparticle Members</a></li>
           <li><a href="neutrinos.html">Neutrino Members</a></li>
-          <li><a href="astroparticle.html">Astroparticle Members</a></li>
           <li><a href="lhcatlas.html">LHC Atlas Members</a></li>
           <li><a href="lhccms.html">LHC CMS Members</a></li>
         </ul>
       </li>
-        <li><a href="scoringrubric.html">The Hunt</a></li>
-        <li><a href="joinatournament.html">Join a Tournament</a></li>
-        <li><a href="instructors.html">The Instructors</a></li>
+      <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="joinatournament.html">Join a Tournament
+                <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="leaderboard.html">Leaderboard</a></li>
+                </ul>
+            </li>
         <li class="dropdown">
        <a class="dropdown-toggle" data-toggle="dropdown" href="conf.html">Conferences
        <span class="caret"></span></a>
@@ -102,9 +105,9 @@
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
+        <li><a href="instructors.html">The Instructors</a></li>
         <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
         <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-        <a href="https://ku.edu/" class="navbar-right"><img src="kansas-jayhawks-profile.jpg" style="width:45px;height:51px"></a>
     </ul>
     </div>
     </nav>
