--- a/joinatournament.html
+++ b/joinatournament.html
@@ -98,16 +98,19 @@
                 <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="directdarkmatter.html">WIMP Dark Matter Members</a></li>
-                  <li><a href="indirectdarkmatter.html">Indirect Dark Matter Members</a></li>
+                  <li><a href="indirectdarkmatter.html">Indirect Dark Matter and Astroparticle Members</a></li>
                   <li><a href="neutrinos.html">Neutrino Members</a></li>
-                  <li><a href="astroparticle.html">Astroparticle Members</a></li>
                   <li><a href="lhcatlas.html">LHC Atlas Members</a></li>
                   <li><a href="lhccms.html">LHC CMS Members</a></li>
                 </ul>
               </li>
-                    <li><a href="scoringrubric.html">The Hunt</a></li>
-                    <li class="active"><a href="joinatournament.html">Join a Tournament</a></li>
-                    <li><a href="instructors.html">The Instructors</a></li>
+              <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="joinatournament.html">Join a Tournament
+                        <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="leaderboard.html">Leaderboard</a></li>
+                        </ul>
+                    </li>
                     <li class="dropdown">
                    <a class="dropdown-toggle" data-toggle="dropdown" href="conf.html">Conferences
                    <span class="caret"></span></a>
@@ -119,9 +122,9 @@
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
+                    <li><a href="instructors.html">The Instructors</a></li>
                     <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                     <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                    <a href="https://ku.edu/" class="navbar-right"><img src="kansas-jayhawks-profile.jpg" style="width:45px;height:51px"></a>
                 </ul>
             </nav>
             <div class="w3-container">
@@ -133,20 +136,20 @@
             <h2 style="color:white"><b><i>WIMP Direct Dark Matter Members</i></b></h2>
             <table colspan="3" class="table table-bordered" style="color:white">
        	        <tr>
-       	            <th scope="col" style="text-align:center">LUX-ZEPLIN (LZ) <br><i>33 points; 6 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
+       	            <th scope="col" style="text-align:center">LUX-ZEPLIN (LZ) &nbsp;&nbsp; <input type="checkbox"></th>
        	            <th scope="col" style="text-align:center">ArDM (Argon Dark Matter Experiment) &nbsp;&nbsp; <input type="checkbox"></th>
               	    <th scope="col" style="text-align:center">XMASS &nbsp;&nbsp; <input type="checkbox"></th>
                     <th scope="col" style="text-align:center">XENON &nbsp;&nbsp; <input type="checkbox"></th>
        	        </tr>
                 <tr>
                     <th scope="col" style="text-align:center">PICASSO &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th scope="col" style="text-align:center">LUX <br><i>25 points; 6 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th scope="col" style="text-align:center">PICO <br><i>15 points; 3 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th scope="col" style="text-align:center">COSINE-100 <br><i>15 points; 3 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th scope="col" style="text-align:center">LUX &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th scope="col" style="text-align:center">PICO &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th scope="col" style="text-align:center">COSINE-100 &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
                 <tr>
                     <th scope="col" style="text-align:center">EDELWEISS &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th scope="col" style="text-align:center">DarkSide <br><i>8 points; 2 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th scope="col" style="text-align:center">DarkSide &nbsp;&nbsp; <input type="checkbox"></th>
                     <th scope="col" style="text-align:center">CRESST &nbsp;&nbsp; <input type="checkbox"></th>
                     <th scope="col" style="text-align:center">DEAP-3600 &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
@@ -157,10 +160,10 @@
                     <th scope="col" style="text-align:center">COUPP-60 &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
             </table><br>
-            <h2 style="color:white"><b><i>Indirect Dark Matter Members</i></b></h2>
+            <h2 style="color:white"><b><i>Indirect Dark Matter and Astroparticle Members</i></b></h2>
             <table colspan="3" class="table table-bordered" style="color:white">
                 <tr>
-                    <th style="text-align:center">Super-Kamiokande <br><i>15 points; 3 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">Super-Kamiokande &nbsp;&nbsp; <input type="checkbox"></th>
                     <th style="text-align:center">PAMELA &nbsp;&nbsp; <input type="checkbox"></th>
                     <th style="text-align:center">MAGIC Telescopes &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
@@ -174,74 +177,70 @@
                     <th style="text-align:center">CTA &nbsp;&nbsp; <input type="checkbox"></th>
                     <th style="text-align:center">AMS &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
+                    <tr>
+                        <th style="text-align:center">KATRIN &nbsp;&nbsp; <input type="checkbox"></th>
+                        <th colspan="2" style="text-align:center">IceCube &nbsp;&nbsp; <input type="checkbox"></th>
+                    </tr>
+                    <tr>
+                        <th style="text-align:center">MeV Gamma-ray &nbsp;&nbsp; <input type="checkbox"></th>
+                        <th colspan="2" style="text-align:center">ADMX (The Axion Dark Matter eXperiment) &nbsp;&nbsp; <input type="checkbox"></th>
+                    </tr>
+                    <tr>
+                        <th style="text-align:center">CERN Axion Solar Telescope &nbsp;&nbsp; <input type="checkbox"></th>
+                        <th colspan="2" style="text-align:center">ANTARES &nbsp;&nbsp; <input type="checkbox"></th>
+                    </tr>
+                </table><br>
             </table><br>
             <h2 style="color:white"><b><i>Neutrino Members</i></b></h2>
             <table colspan="3" class="table table-bordered" style="color:white">
                 <tr>
-                    <th style="text-align:center">PROSPECT <br><i>27 points; 5 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th style="text-align:center">NOvA <br><i>92 points; 13 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th style="text-align:center">MicroBooNE <br><i>25 points; 5 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">PROSPECT &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">NOvA &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">MicroBooNE &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
                 <tr>
-                    <th style="text-align:center">COHERENT <br><i>32 points; 5 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th style="text-align:center">JUNO <br><i>8 points; 2 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th style="text-align:center">DUNE <br><i>61 points; 11 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">COHERENT &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">JUNO &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">DUNE &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
                 <tr>
                     <th style="text-align:center">MINOS &nbsp;&nbsp; <input type="checkbox"></th>
                     <th style="text-align:center">BOREXINO &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th style="text-align:center">MiniBooNE <br><i>7 points; 2 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">MiniBooNE &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
                 <tr>
-                    <th style="text-align:center">ICARUS <br><i>8 points; 2 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">ICARUS &nbsp;&nbsp; <input type="checkbox"></th>
                     <th colspan="2" style="text-align:center">T2K &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
             </table><br>
-            <h2 style="color:white"><b><i>Astroparticle Members</i></b></h2>
-            <table colspan="3" class="table table-bordered" style="color:white">
-                <tr>
-                    <th style="text-align:center">KATRIN <br><i>8 points; 2 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th style="text-align:center">IceCube <br><i>82 points; 13 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                </tr>
-                <tr>
-                    <th style="text-align:center">MeV Gamma-ray &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th style="text-align:center">ADMX (The Axion Dark Matter eXperiment) <br><i>37 points; 6 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                </tr>
-                <tr>
-                    <th style="text-align:center">CERN Axion Solar Telescope &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th style="text-align:center">ANTARES &nbsp;&nbsp; <input type="checkbox"></th>
-                </tr>
-            </table><br>
-            <h2 style="color:white"><b><i>LHC Atlas Members</i></b></h2>
-            <table colspan="3" class="table table-bordered" style="color:white">
-                <tr>
-                    <th style="text-align:center">The Standard Model &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th style="text-align:center">Higgs Physics <br><i>29 points; 4 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                </tr>
-                <tr>
-                    <th style="text-align:center">Supersymmetry <br><i>9 points; 1 talk</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th style="text-align:center">Exotica <br><i>8 points; 1 talk</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                </tr>
-                <tr>
-                    <th colspan="2" style="text-align:center">Research & Development, Upgrades, Detector Operation, & Instrumentation <br><i>41 points; 6 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                </tr>
-            </table><br>
-            <h2 style="color:white"><b><i>LHC CMS Members</i></b></h2>
-            <table colspan="3" class="table table-bordered" style="color:white">
-                <tr>
-                    <th style="text-align:center">The Standard Model <br><i>23 points; 3 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th style="text-align:center">Higgs Physics <br><i>33 points; 4 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                </tr>
-                <tr>
-                    <th style="text-align:center">Supersymmetry <br><i>31 points; 4 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                    <th style="text-align:center">Exotica <br><i>67 points; 9 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                </tr>
-                <tr>
-                    <th colspan="2" style="text-align:center">Research & Development, Upgrades, Detector Operation, & Instrumentation <br><i>15 points; 2 talks</i> &nbsp;&nbsp; <input type="checkbox"></th>
-                </tr>
-            </table><br>
 
-
+            <h2 style="color:white"><b><i>LHC Members</i></b></h2>
+            <table colspan="3" class="table table-bordered" style="color:white">
+                <tr>
+                    <th style="text-align:center">The Standard Model at Atlas &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">Higgs Physics at Atlas &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+                <tr>
+                    <th style="text-align:center">Supersymmetry at Atlas &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">Exotica at Atlas &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+                <tr>
+                    <th colspan="2" style="text-align:center">Research & Development, Upgrades, Detector Operation, & Instrumentation at Atlas &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+                </table><br>
+                <table colspan="3" class="table table-bordered" style="color:white">
+                <tr>
+                    <th style="text-align:center">The Standard Model at CMS &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">Higgs Physics at CMS &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+                <tr>
+                    <th style="text-align:center">Supersymmetry at CMS &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">Exotica at CMS &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+                <tr>
+                    <th colspan="2" style="text-align:center">Research & Development, Upgrades, Detector Operation, & Instrumentation at CMS &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+            </table><br>
 
                <button id="myBtn" onclick="topFunction()">
         	   <span class="glyphicon glyphicon-arrow-up"></span> Top </button>
