--- a/login.html
+++ b/login.html
@@ -100,9 +100,10 @@
         </ul>
       </li>
       <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="joinatournament.html">Join a Tournament
+            <a class="dropdown-toggle" data-toggle="dropdown" href="joinatournament.html">Recruit
                 <span class="caret"></span></a>
                 <ul class="dropdown-menu">
+                    <li><a href="joinatournament.html">Join a Tournament</a></li>
                     <li><a href="leaderboard.html">Leaderboard</a></li>
                 </ul>
             </li>
