--- a/upcomingconf.html
+++ b/upcomingconf.html
@@ -52,6 +52,12 @@
      {
         background-color: #555;
      }
+     .center
+     {
+         display: block;
+         margin-left: auto;
+         margin-right: auto;
+     }
 </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -134,7 +140,9 @@
     <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
     <div class="cd-scrolling-bg__content">
 
-    <iframe width="700" height="550" frameborder="0" scrolling="no" src="https://kansas-my.sharepoint.com/personal/l130d568_home_ku_edu/_layouts/15/Doc.aspx?sourcedoc={86f4002a-9770-41bb-b3ed-4d08c82a4695}&action=embedview&wdAllowInteractivity=False&wdDownloadButton=True&wdInConfigurator=True"></iframe>
+<img class="center" src="https://www.aps.org/meetings/april/images/April19_metadata_v2-1.png">
+<h3 class="w3-center" style="text-align:center;color:white"><font face="sans-serif"><a href="https://www.aps.org/meetings/april/"><u style="color:white">"The APS April Meeting</a></u> encapsulates the full range of physical scales including astrophysics, particle physics, nuclear physics, and gravitation. To experience the meeting is to explore research from the "Quarks to the Cosmos (Q2C)," which is the true essence of the meeting."</h3>
+
 
         <button id="myBtn" onclick="topFunction()">
         <span class="glyphicon glyphicon-arrow-up"></span> Top </button>
