--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@
         </ul>
       </li>
       <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="joinatournament.html">Join a Tournament
+            <a class="dropdown-toggle" data-toggle="dropdown" href="joinatournament.html">Recruit
                 <span class="caret"></span></a>
                 <ul class="dropdown-menu">
+                    <li><a href="joinatournament.html">Join a Tournament</a></li>
                     <li><a href="leaderboard.html">Leaderboard</a></li>
                 </ul>
             </li>
@@ -111,9 +112,12 @@
          <h2 style="text-align:center;color:white"><font face="sans-serif"> to </h2><br><br><br> -->
          <h1 class="w3-center w3-animate-bottom" style="text-align:center;color:white"><font face="sans-serif"><i> FANTASY PHYSICS <i></h1>
          </div>
+         <h3 class="w3-center" style="text-align:center;color:white"><font face="sans-serif">Be in charge of your own crew roster of physics experiments.
+             <h3 class="w3-center" style="text-align;color:white"><font face="sans-serif">Compete against other crew rosters,
+             get the most points, make the playoffs; become champion.</h3><br>
          <div class="delay2">
-         <h3 style="text-align:center;color:white"><i> ~ unlock the potential ~ </i></h3>
-        </div>
+         <h4 style="text-align:center;color:white"><i> ~ unlock the potential ~ </i></h4>
+     </div>
 </div>
 
 
