--- a/joinatournament.html
+++ b/joinatournament.html
@@ -105,9 +105,10 @@
                 </ul>
               </li>
               <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="joinatournament.html">Join a Tournament
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="joinatournament.html">Recruit
                         <span class="caret"></span></a>
                         <ul class="dropdown-menu">
+                            <li><a href="joinatournament.html">Join a Tournament</a></li>
                             <li><a href="leaderboard.html">Leaderboard</a></li>
                         </ul>
                     </li>
@@ -131,7 +132,7 @@
             <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
             <div class="cd-scrolling-bg__content">
             <p class="round1" style="color:white;text-align:center"><font size="4">You have deciphered <a href="rules.html" style="color:white"><u>the game</u></a>,
-                seen <a href="directdarkmatter.html" style="color:white"><u>the crew</u></a>, and know how we <a href="scoringrubric.html" style="color:white"><u>hunt</u></a>. <br><br>It is now time for you, The Executive,
+                seen <a href="directdarkmatter.html" style="color:white"><u>the crew</u></a>, and know how we <a href="rules.html" style="color:white"><u>hunt</u></a>. <br><br>It is now time for you, The Executive,
                 to buy into the game.<br><br>Select your crew below and begin to understand the Universe.</p></font><br>
             <h2 style="color:white"><b><i>WIMP Direct Dark Matter Members</i></b></h2>
             <table colspan="3" class="table table-bordered" style="color:white">
