--- a/rules.html
+++ b/rules.html
@@ -90,9 +90,10 @@
         </ul>
       	   	</li>
             <li class="dropdown">
-                  <a class="dropdown-toggle" data-toggle="dropdown" href="joinatournament.html">Join a Tournament
+                  <a class="dropdown-toggle" data-toggle="dropdown" href="joinatournament.html">Stats
                       <span class="caret"></span></a>
                       <ul class="dropdown-menu">
+                          <li><a href="joinatournament.html">Join a Tournament</a></li>
                           <li><a href="leaderboard.html">Leaderboard</a></li>
                       </ul>
                   </li>
@@ -133,20 +134,20 @@
                 <div id="collapse2" class="panel-collapse collapse">
                     <ol class="list-group">
                       <li class="list-group-item"><font size="3"><i><b> 1) Join the Alliance</i></b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Every executive signs up for a spot
-                      in the alliance to begin selecting their own crew.</font></li>
-                      <li class="list-group-item"><font size="3"><i><b> 2) Prepare to select your crew by surveying crew members</i></b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                      Prior to picking your fantasy crew, explore all the available members to have a pre-made list of members ranked according to your individual preference.
+                      in the alliance to begin selecting their own crew roster.</font></li>
+                      <li class="list-group-item"><font size="3"><i><b> 2) Prepare to select your crew roster by surveying crew members</i></b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                      Prior to picking your fantasy  roster, explore all the available members to have a pre-made list of members ranked according to your individual preference.
                       Understanding the scoring system and crew setup is essential to creating a bulletproof strategy.</font></li>
-                      <li class="list-group-item"><font size="3"><i><b> 3) Build your crew</i></b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Each executive chooses one member
-                      at a time until their crew is full; don't forget to select a well-rounded crew. </font></li>
-                      <li class="list-group-item"><font size="3"><i><b> 4) Your crew competes against another crew every week</i></b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                          The members' stats from <a href="#identifier" style="color:black"><i><u>The Hunt</u></i></a> taken from presentations given at the American Physical Society convention are converted into fantasy points. The crew that has
+                      <li class="list-group-item"><font size="3"><i><b> 3) Build your crew roster</i></b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Each executive chooses one member
+                      at a time until their crew roster is full; don't forget to select a well-rounded crew roster. </font></li>
+                      <li class="list-group-item"><font size="3"><i><b> 4) Your crew roster competes against another crew roster every week</i></b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                          The members' stats from <a href="#identifier" style="color:black"><i><u>The Hunt</u></i></a> taken from presentations given at the American Physical Society convention are converted into fantasy points. The crew roster that has
                           earned the most points wins the game for that week. Win as many games as possible for a chance to qualify for the playoffs.</font></li>
                       <li class="list-group-item"><font size="3"><i><b> 5) Make moves to boost your crew</i></b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; As the executive, you are in charge:
                           Drop or bench members you feel aren't cutting it and replace them with available members, your second strings, or even make trades with other executives.</font></li>
-                      <li class="list-group-item"><font size="3"><i><b> 6) Your crew (optimistically) makes the playoffs and wins the alliance</i></b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                          Only the strong survive, and at the end of the fantasy season, the top crews square off in a single-elimination tournament to decide the alliance champion. The last crew
-                          standing wins a suprise, and substantial, amount of fantasy points and bragging rights until the next season. Make no mistake: there can only be one alliance champ.</font></li>
+                      <li class="list-group-item"><font size="3"><i><b> 6) Your crew roster (optimistically) makes the playoffs and wins the alliance</i></b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                          Only the strong survive, and at the end of the fantasy season, the top crew rosters square off in a single-elimination tournament to decide the alliance champion. The last crew roster
+                          standing wins a suprise, and substantial, amount of fantasy points and bragging rights until next season. Make no mistake: there can only be one alliance champ.</font></li>
                     </ol>
                 </div>
             </div>
@@ -164,13 +165,13 @@
       </div>
       <div id="collapse1" class="panel-collapse collapse">
         <ul class="list-group">
-          <li class="list-group-item"><font size="3"><i><b>The Executive</i></b> - Owner and in charge of their own Crew</font></li>
-          <li class="list-group-item"><font size="3"><i><b>The Alliance</i></b> - Where each Executive's Crews are housed and where the competition against Crews takes place</font></li>
+          <li class="list-group-item"><font size="3"><i><b>The Executive</i></b> - Owner and in charge of their own Crew roster</font></li>
+          <li class="list-group-item"><font size="3"><i><b>The Alliance</i></b> - Where each Executive's Crew rosters are housed and where the competition against Crew rosters takes place</font></li>
           <li class="list-group-item"><font size="3"><i><b>The Crew</i></b> - Chosen Physics research subcategories that encompass The Crew Members</font></li>
           <li class="list-group-item"><font size="3"><i><b>The Crew Members</i></b> - Chosen physics experiments conducted under each specific research subcategory;
-              these Members are to be selected for The Executive's own Crew</font></li>
+              these Members are to be selected for The Executive's own Crew roster</font></li>
           <li class="list-group-item"><font size="3"><i><b>Fantasy Points</i></b> - Points are tallied to each crew member and serves as their stats and supplies their ranking. The higher the points,
-              the higher the ranking and the higher chances of that member doing well. Points will determine which crew will enter the playoffs in an event of a game-winning tie.</font></li>
+              the higher the ranking and the higher chances of that member doing well. Points will determine which crew roster will enter the playoffs in an event of a game-winning tie.</font></li>
         </ul>
       </div>
     </div>
@@ -189,7 +190,7 @@
                 <div id="collapse3" class="panel-collapse collapse">
                     <ul class="list-group">
                       <li class="list-group-item"><font size="3"><i><b> A) </i></b> Fantasy points will be scored and stored digitally </font></li>
-                      <li class="list-group-item"><font size="3"><i><b> B) </i></b> Each crew will have 15 different members </font></li>
+                      <li class="list-group-item"><font size="3"><i><b> B) </i></b> Each crew roster will have 11 different members </font></li>
                       <li class="list-group-item"><font size="3"><i><b> C) </i></b> Every Exeuctive must have 2 members from each crew, with the remaining 3 coming from any crew of choice </font></li>
                       <li class="list-group-item"><font size="3"><i><b> D) </i></b> No two Executives may have the exact same crew; at least one member must differ </font></li>
                       <li class="list-group-item"><font size="3"><i><b> E) </i></b> When the number of Executives is odd, each Executive & their crew will have a bye week </font></li>
