--- a/creators.html
+++ b/creators.html
@@ -16,7 +16,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://cdn1.collective-evolution.com/assets/uploads/2015/10/milk.jpg");
+        background-image: url("https://cdn.pixabay.com/photo/2015/04/02/08/13/universe-703522_1280.jpg");
     }
     .cd-fixed-bg
     {
