--- a/directdarkmatter.html
+++ b/directdarkmatter.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("http://cdn.spacetelescope.org/archives/images/screen/opo0917a.jpg");
+        background-image: url("https://cdn.pixabay.com/photo/2017/08/15/08/23/galaxy-2643089_1280.jpg");
     }
     .cd-fixed-bg
     {
