--- a/indirectdarkmatter.html
+++ b/indirectdarkmatter.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://media.npr.org/assets/img/2018/02/27/first-star-_wide-2cfbca2ae8d16845f200a84d49d7ddbb5b120323-s800-c85.jpg");
+        background-image: url("https://cdn.pixabay.com/photo/2015/08/28/11/27/space-911785_1280.jpg");
     }
     .cd-fixed-bg
     {
