--- a/leaderboard.html
+++ b/leaderboard.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://images.pexels.com/photos/733475/pexels-photo-733475.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+        background-image: url("https://cdn.pixabay.com/photo/2016/11/29/02/20/astronomy-1866822_1280.jpg");
     }
     .cd-fixed-bg
     {
