--- a/pastconf.html
+++ b/pastconf.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://images.pexels.com/photos/1146134/pexels-photo-1146134.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+        background-image: url("https://cdn.pixabay.com/photo/2016/11/18/22/58/galaxy-1837306_1280.jpg");
     }
     .cd-fixed-bg
     {
