--- a/rules.html
+++ b/rules.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://w-dog.net/wallpapers/9/7/328558911024823.jpg");
+        background-image: url("https://cdn.pixabay.com/photo/2015/10/12/14/59/milky-way-984050_1280.jpg");
     }
     .cd-fixed-bg
     {
