--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     }
     .bg
     {
-        background-image: url("https://files-3.torontosportshow.ca/cache/157/c/3840x1687.jpg");
+        background-image: url("https://cdn.pixabay.com/photo/2016/01/19/17/39/starry-night-1149815_1280.jpg");
         height: 100%;
         background-position: center;
         background-repeat: no-repeat;
