--- a/neutrinos.html
+++ b/neutrinos.html
@@ -12,7 +12,7 @@
 }
 .cd-fixed-bg.cd-fixed-bg--1
 {
-    background-image: url("https://underground.physics.berkeley.edu/img/experiments/snoplus/snoplus2.jpg");
+    background-image: url("https://cdn.pixabay.com/photo/2017/08/07/21/52/nature-2608274_1280.jpg");
 }
 .cd-fixed-bg
 {
