--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("http://desktop-backgrounds-org.s3.amazonaws.com/orion-nebula-nature_0.jpg");
+        background-image: url("https://cdn.pixabay.com/photo/2016/01/19/17/39/starry-night-1149815_1280.jpg");
     }
     .cd-fixed-bg
     {
