--- a/joinatournament.html
+++ b/joinatournament.html
@@ -12,7 +12,7 @@
             }
             .cd-fixed-bg.cd-fixed-bg--1
             {
-                background-image: url("http://hdhintergrundbilder.net/image/weltraum/1574/nebelfleck-planet-gluehen-strahlen.jpg");
+                background-image: url("https://cdn.pixabay.com/photo/2016/07/28/14/40/space-1548139_1280.jpg");
             }
             .cd-fixed-bg
             {
