--- a/creators.html
+++ b/creators.html
@@ -96,6 +96,7 @@
                 <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="joinatournament.html">Join a Tournament</a></li>
+                    <li><a href="pasttourn.html">Past Tournaments</a></li>
                     <li><a href="leaderboard.html">Leaderboard</a></li>
                 </ul>
             </li>
