--- a/signup.html
+++ b/signup.html
@@ -98,27 +98,28 @@
           <li><a href="lhcatlas.html">LHC Atlas Members</a></li>
           <li><a href="lhccms.html">LHC CMS Members</a></li>
         </ul>
-      </li>
+            </li>
       <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="joinatournament.html">Recruit
                 <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="joinatournament.html">Join a Tournament</a></li>
+                    <li><a href="pasttourn.html">Past Tournaments</a></li>
                     <li><a href="leaderboard.html">Leaderboard</a></li>
                 </ul>
-            </li>
-        <li><a href="instructors.html">The Instructors</a></li>
-        <li class="dropdown">
+       </li>
+       <li class="dropdown">
        <a class="dropdown-toggle" data-toggle="dropdown" href="conf.html">Conferences
        <span class="caret"></span></a>
        <ul class="dropdown-menu">
          <li><a href="pastconf.html">Past Conferences</a></li>
          <li><a href="upcomingconf.html">Upcoming Conferences</a></li>
        </ul>
-     </li>
+       </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a href="instructors.html">The Instructors</a></li>
+        <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
         <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
 </div>
@@ -130,7 +131,7 @@
     <div class="center">
     <div id="login_div" class="main-div input">
     <div class="container">
-        <input style="text-align:center type="email" placeholder="Email" id="email_field"><br>
+        <input type="email" placeholder="Email" id="email_field"><br>
         <input type="password" placeholder="Password" id="password_field"><br>
         <button onclick="signup()">Sign Up</button>
     </div>
@@ -142,10 +143,10 @@
          <p id="user_para" style="text-align:center;color:white"><font face="sans-serif">You are now signed up!</p>
          <button onclick="logout()">Logout</button>
     </div>
- <div class="footer">
-         <i><p>Developed at <u><a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</u></a> |
-         <u><a href="about.html" style="color:white">About</u></a> | <u><a href="creators.html" style="color:white">The Creators</i></u></a></p> | &copy; 2018</p>
-     </div>
+    <div class="footer">
+        <i><p>Developed at <u><a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</u></a> |
+        <u><a href="about.html" style="color:white">About</u></a> | <u><a href="creators.html" style="color:white">The Creators</i></u></a> | &copy; 2018</p>
+    </div>
 
 </body>
 </html>
