--- a/instructors.html
+++ b/instructors.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -92,6 +93,7 @@
                 <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="joinatournament.html">Join a Tournament</a></li>
+                    <li><a href="pasttourn.html">Past Tournaments</a></li>
                     <li><a href="leaderboard.html">Leaderboard</a></li>
                 </ul>
             </li>
