--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -90,6 +90,7 @@
       </li>
          <li class="active"><a href="scoringrubric.html">The Hunt</a></li>
 	     <li><a href="joinatournament.html">Join a Tournament</a></li>
+         <li><a href="pasttourn.html">Past Tournaments</a></li>
          <li><a href="instructors.html">The Instructors</a></li>
          <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="conf.html">Conferences
